集成 jEG/jMG 模块并重构 UI。
新增第三方生成器适配层与回退机制，复用原有检测和攻击链路，保持 Legacy 默认行为与兼容性。

Made-with: Cursor